[package]
name = "twitter_stream"
version = "0.1.0"
authors = ["Jeremy Savor <jrmysvr@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json", "stream"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
serde_bytes = "0.11.5"
futures-util = "0.3"
